# librsu

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: coverity_scan.yml  doxygen.yml  linux-aarch64.yml  unit-test.yml  zephyr_build.yml
cmake/: checkGit.cmake  coverage.cmake  doxygen.cmake  platform.cmake
docs/: Doxyfile.in
include/: CMakeLists.txt  libRSU.h  libRSU_OSAL.h
include/hal/: RSU_plat_misc.h
include/utils/: RSU_logging.h  RSU_utils.h
linux-example/: CMakeLists.txt  rsu_client.c
linux-example/dependency/: CMakeLists.txt  rsu_file_ops.c  rsu_linux_utils.c  rsu_linux_utils.h  rsu_mailbox_ops.c  rsu_misc_ops.c  rsu_qspi_ops.c
linux-example/dependency/linux/: CMakeLists.txt  RSU_osal_linux.c
platform/: CMakeLists.txt
platform/host/: CMakeLists.txt  gcc-9.cmake  gcc.cmake  toolchain.cmake
platform/host/include/: RSU_OSAL_types.h
platform/linux-aarch64/: CMakeLists.txt  aarch64-none-linux-gnu-gcc.cmake  toolchain.cmake
platform/linux-aarch64/dependency/: CMakeLists.txt  rsu_crc32.c  rsu_file_ops.c  rsu_linux_utils.c  rsu_mailbox_ops.c  rsu_misc_ops.c  rsu_qspi_ops.c
platform/linux-aarch64/dependency/linux/: CMakeLists.txt  RSU_logging_linux.c  RSU_osal_linux.c
platform/linux-aarch64/include/: RSU_OSAL_types.h
platform/platform_include/hal/: RSU_plat_crc32.h  RSU_plat_file.h  RSU_plat_mailbox.h  RSU_plat_qspi.h
platform/platform_include/utils/: RSU_utils.h
platform/zephyr/: CMakeLists.txt  toolchain.cmake
platform/zephyr/include/: RSU_OSAL_types.h
src/: CMakeLists.txt  libRSU.c  libRSU_cb.c  libRSU_cfg.c  libRSU_image.c  libRSU_misc.c  libRSU_ops.c  libRSU_utils.c
src/priv_include/: libRSU_cb.h  libRSU_cfg.h  libRSU_context.h  libRSU_hl_intf.h  libRSU_image.h  libRSU_ll_intf.h  libRSU_misc.h  libRSU_ops.h
unit-test/: CMakeLists.txt
unit-test/collaterals/: CMakeLists.txt  bl2.hex  factory.sof  factory_p1p2p3.pfg
unit-test/test1/: CMakeLists.txt  librsu_config.rc  librsu_test.cpp
unit-test/test1/dependency/: CMakeLists.txt  rsu_mock_file.c  rsu_mock_mailbox.c  rsu_mock_qspi.c
unit-test/test1/dependency/linux/: CMakeLists.txt  RSU_logging_linux.c
unit-test/test2/: CMakeLists.txt  librsu_config.rc  librsu_test2.cpp
unit-test/test2/dependency2/: CMakeLists.txt  mock_spt.h  rsu_mock_file.c  rsu_mock_mailbox.c  rsu_mock_misc.c  rsu_mock_qspi.c  rsu_mock_utils.c  rsu_mock_utils.h
unit-test/test2/dependency2/linux/: CMakeLists.txt
unit-test/test3/: CMakeLists.txt  librsu_test3.cpp
unit-test/test3/dependency3/: CMakeLists.txt  mock_spt.h  rsu_mock_file.c  rsu_mock_qspi.c
unit-test/test3/dependency3/linux/: CMakeLists.txt
unit-test/test4/: CMakeLists.txt  librsu_test.cpp
unit-test/test4/dependency/: CMakeLists.txt  mock.h  rsu_crc32.c  rsu_mock_file.c  rsu_mock_mailbox.c  rsu_mock_misc.c  rsu_mock_qspi.c
unit-test/test4/dependency/linux/: CMakeLists.txt  RSU_logging_linux.c
unit-test/test5/: CMakeLists.txt  librsu_config.rc  librsu_test.cpp
unit-test/test5/dependency/: CMakeLists.txt  mock.h  rsu_mock_file.c  rsu_mock_mailbox.c  rsu_mock_qspi.c
unit-test/test5/dependency/linux/: CMakeLists.txt
unit-test/test6/: CMakeLists.txt  librsu_test.cpp
unit-test/test6/dependency/: CMakeLists.txt  mock.h  rsu_crc32.c  rsu_mock_mailbox.c
unit-test/test6/dependency/linux/: CMakeLists.txt
version/: CMakeLists.txt  version.c.in  version.h.in
zephyr/: module.yml
